# satnet-arch-dss-mac

./: .gitignore  AGENTS.md  Makefile  README.md  README_THESIS.md  Tier1_Correlated_Failure_Models_Implementation_Plan.md  Tier1_Dynamic_Graph_Feature_Engineering_Reliability.md  Tier1_Labels_Implementation_Plan.md  Tier1_Probabilistic_ISL_Availability_Implementation_Plan.md  Tier1_WalkerDelta_ISL_Topology_Implementation_Plan.md  pyproject.toml  reearch-plan.md  requirements_ml.txt
.beads/: .gitignore  deletions.jsonl  issues.jsonl  sync-state.json
.desloppify/: plan.json  query.json  review_packet_blind.json  state-python.json  state-python.json.bak
.desloppify/review_packets/: holistic_packet_20260305_034133.json
.desloppify/subagents/runs/20260305_034133/: run_summary.json
.desloppify/subagents/runs/20260305_034133/prompts/: batch-1.md  batch-10.md  batch-11.md  batch-12.md  (+16 more)
.github/workflows/: ci.yml
docs/: codemap_data_to_decision_pipeline.md  physics_constants.md  presentation_script_data_to_decision.md  proxy_metric_repo_map.md  proxy_metric_workflow.md  walkthrough_advisor_demo.md
docs/advisor_meeting/: 2026-01-21_slide_content_what_why_how.md  2026-01-24_ibrahim_explainer_script.md  2026-02-07_advisor_meeting_notes.md  2026-02-17_phase1_restart_execution_update.md  2026-03-07_code_mapped_advisor_briefing_note.md
docs/codereview/: 2025-12-13_last-8-commits_tier1-temporal-gcc.md  2026-01-06_codebase-audit_tier1-vs-readme_thesis.md  SatNet_Code_Review_Agent_Brief.md
docs/datasets/: tier1_temporal_connectivity_v1_schema.md
docs/flowcharts/: flowcharts_2026-01-21.md
docs/handoff/: 2026-01-07_agent_handoff_prompt.md
docs/refactor_plans/: 2026-01-06_tier1_cleanup_structural_fixes.md  2026-01-08_advisor_plan_alignment_ml_pipeline_and_external_datasets.md  gemini_refactor_plan.md  gpt5.2 refactor plan - tier1 temporal gcc.md  unified_refactor_plan_tier1_temporal_gcc.md
docs/research/: Tier1_GroundStation_Integration_Implementation_Plan.md  Tier1_TimeVarying_Connectivity_Implementation_Plan.md  Tier1_Traffic_and_Routing_Models_Satellite_Mesh_Implementation_Plan.md  gnn_architecture_plan.md  research-plane2.md
experiments/autoresearch/: candidate.json  incumbent.json  mutation_policy.json  program.md
models/: design_risk_model_metrics.json  risk_model_metrics.json
scripts/: export_design_dataset.py  export_failure_dataset.py  failure_sweep.py  run_autoresearch_rf.py  score_risk_examples.py  simulate.py  train_design_risk_model.py  train_gnn_model.py  train_risk_model.py  visualize_constellation.py
src/satnet/legacy/: __init__.py  engine.py  failures.py
src/satnet/metrics/: __init__.py  labels.py  resilience_targets.py  risk_binning.py
src/satnet/models/: __init__.py  autoresearch_rf.py  gnn_dataset.py  gnn_model.py  risk_model.py
src/satnet/network/: hypatia_adapter.py  topology.py
src/satnet/simulation/: engine.py  failures.py  monte_carlo.py  tier1_rollout.py
src/satnet/utils/: experiment_logger.py  graph_cache.py
tests/: test_tier1_contract.py  test_tier1_guardrails.py
tests/metrics/: test_labels.py  test_resilience_targets.py  test_risk_binning.py
tests/models/: test_autoresearch_rf.py  test_gnn_dataset.py  test_gnn_model.py  test_risk_model.py
tests/network/: test_hypatia_adapter_iter.py
tests/scripts/: test_run_autoresearch_rf.py  test_target_truthfulness.py  test_train_design_risk_model.py  test_train_gnn_model.py
tests/simulation/: test_monte_carlo.py  test_tier1_rollout.py
tests/tools/: test_validate_proxy_rankings.py
tests/utils/: test_experiment_logger.py  test_graph_cache.py
tools/: analyze_dataset_targets.py  validate_proxy_rankings.py
(+8 files in other folders)
