[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "satnet"
version = "0.1.0"
description = "Satellite Network Architecture Risk Analysis Framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "sgp4>=2.22",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "torch-geometric>=2.4",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
