[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "satnet"
version = "0.1.0"
description = "Satellite Network Architecture Risk Analysis Framework"
readme = "README.md"
requires-python = ">=3.11"

# Core simulation dependencies (Tier 1 - pinned for reproducibility)
# See docs/physics_constants.md for physics dependency notes
dependencies = [
    "networkx>=3.0,<4.0",
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<3.0",
    "sgp4>=2.22,<3.0",  # Required for Tier 1 orbital propagation
]

[project.optional-dependencies]
ml = [
    "torch>=2.0,<3.0",
    "torch-geometric>=2.4,<3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# --- Static Analysis (minimal, incremental) ---

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["src/satnet/legacy/"]

[tool.ruff.lint]
# Minimal rule set: Pyflakes (F), syntax errors (E9) only
# Avoid isort (I) for now to prevent mass style churn
select = ["F", "E9"]
# Ignore cleanup issues to avoid mass churn; focus on real bugs (F821, etc.)
ignore = ["F401", "F541", "F841"]

[tool.mypy]
python_version = "3.11"
# Permissive baseline - add strict overrides per-module later
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Disable strict checks initially; tighten per-module later
check_untyped_defs = false
disallow_untyped_defs = false
# Allow implicit None defaults (common in existing code)
no_implicit_optional = false
# Disable error codes that have existing violations (tech debt)
# TODO: Fix these and remove from disable list incrementally
disable_error_code = ["union-attr", "return-value", "arg-type", "assignment", "valid-type"]
exclude = ["src/satnet/legacy/"]

[[tool.mypy.overrides]]
module = [
    "sgp4.*",
    "satgenpy.*",
    "torch.*",
    "torch_geometric.*",
    "torch_geometric_temporal.*",
    "sklearn.*",
    "joblib.*",
    "tqdm.*",
    "pandas.*",
    "networkx.*",
    "numpy.*",
]
ignore_missing_imports = true
